--- a/src/main/resources/templates/fragments/header_Original.html
+++ b/src/main/resources/templates/fragments/header_Original.html
@@ -13,9 +13,9 @@
                 <!-- Nav -->
                 <nav id="nav">
                     <ul>
-                        <li><a class="icon solid fa-home" href="/index"><span>HOURS & LOCATION</span></a></li>
+                        <li><a class="icon solid fa-home" href="/index"><span>Introduction</span></a></li>
                         <li>
-                            <a href="#" class="icon solid fa-chart-bar"><span>Dropdown</span></a>
+                            <a href="#" class="icon fa-chart-bar"><span>Dropdown</span></a>
                             <ul>
                                 <li><a href="#">Lorem ipsum dolor</a></li>
                                 <li><a href="#">Magna phasellus</a></li>
