아이콘 변경 및 Test Class 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
                 <!-- Nav -->
                 <nav id="nav">
                     <ul>
-                        <li><a class="icon solid fa-home" href="/index"><span>HOURS & LOCATION</span></a></li>
+                        <li><a class="icon solid fa-store" href="/index"><span>HOURS & LOCATION</span></a></li>
                         <li>
                             <a href="#" class="icon solid fa-chart-bar"><span>Dropdown</span></a>
                             <ul>
