header menu 수정 및 delivery link 연결

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,33 +7,17 @@
             <div class="container">
 
                 <!-- Logo -->
-                <h1 id="logo"><a href="/index">Strongly Typed</a></h1>
-                <p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+                <h1 id="logo"><a th:href="@{/index}">MANON BAKERY</a></h1>
+                <p>한국 정통 빵을 판매, 마농은 제주도어로 마늘이라는 뜻</p>
 
                 <!-- Nav -->
                 <nav id="nav">
                     <ul>
-                        <li><a class="icon solid fa-store" href="/index"><span>HOURS & LOCATION</span></a></li>
-                        <li>
-                            <a href="#" class="icon solid fa-chart-bar"><span>Dropdown</span></a>
-                            <ul>
-                                <li><a href="#">Lorem ipsum dolor</a></li>
-                                <li><a href="#">Magna phasellus</a></li>
-                                <li><a href="#">Etiam dolore nisl</a></li>
-                                <li>
-                                    <a href="#">Phasellus consequat</a>
-                                    <ul>
-                                        <li><a href="#">Magna phasellus</a></li>
-                                        <li><a href="#">Etiam dolore nisl</a></li>
-                                        <li><a href="#">Phasellus consequat</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Veroeros feugiat</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="icon solid fa-cog" href="/left"><span>Left Sidebar</span></a></li>
-                        <li><a class="icon solid fa-retweet" href="/right"><span>Right Sidebar</span></a></li>
-                        <li><a class="icon solid fa-sitemap" href="/no_side"><span>No Sidebar</span></a></li>
+                        <li><a class="icon solid fa-store" th:href="@{/index}"><span>HOURS & LOCATION</span></a></li>
+                        <li><a class="icon solid fa-clipboard-list" th:href="@{#}"><span>MENU</span></a></li>
+                        <li><a class="icon solid fa-bread-slice" th:href="@{/left}"><span>ABOUT ME</span></a></li>
+                        <li><a class="icon solid fa-truck" th:href="@{https://www.ubereats.com/ca/store/manon-bakery/e4N9DTnsXj2yvoVRfpcxyA}" target="_blank"><span>DELIVERY</span></a></li>
+                        <li><a class="icon solid fa-bell" th:href="@{/no_side}"><span>PICKUP</span></a></li>
                     </ul>
                 </nav>
             </div>
