--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -195,7 +195,7 @@ input, select, textarea {
 	}
 
 	ul, ol, dl, table, blockquote {
-		margin-bottom: 2em;
+		margin-bottom: 1em;
 	}
 
 	br.clear {
@@ -1418,7 +1418,7 @@ input, select, textarea {
 				}
 
 					.row > * {
-						padding: 30px 0 0 30px;
+						padding: 15px 0 0 30px;
 					}
 
 					.row.gtr-uniform {
@@ -1974,7 +1974,7 @@ input, select, textarea {
 					font-size: 0.8em;
 					height: 2.25em;
 					border-radius: 2.25em;
-					line-height: 2.1em;
+					line-height: 2.3em;
 					text-align: center;
 					box-shadow: 0.125em 0.175em 0 0 rgba(0, 0, 0, 0.125);
 					margin-right: 0.75em;
@@ -2234,7 +2234,7 @@ input, select, textarea {
 	#copyright {
 		border-top: solid 2px #e5e5e5;
 		text-align: center;
-		margin-top: 4em;
+		margin-top: 2em;
 		padding-top: 2em;
 	}
 
@@ -2277,7 +2277,7 @@ input, select, textarea {
 		/* Header */
 
 			#header > .container {
-				padding: 10em 0 4em 0; /* 12 */
+				padding: 8em 0 2em 0; /* 12 */
 			}
 
 			#header h1 {
@@ -2293,7 +2293,7 @@ input, select, textarea {
 		/* Features */
 
 			#features {
-				padding: 4em 0;
+				padding: 3em 0;
 			}
 
 		/* Banner */
@@ -2319,7 +2319,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 2em 0;
+				padding: 2em 0 0;
 			}
 
 		/* Copyright */
@@ -2646,7 +2646,7 @@ input, select, textarea {
 		/* Features */
 
 			#features {
-				padding: 2em 0;
+				padding: 1em 0;
 			}
 
 				#features ul.actions {
@@ -2682,7 +2682,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 2em 0;
+				padding: 2em 0 1em;
 			}
 
 				#footer ul.icons {
